attempt #3 to fix overflow issue on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -70,7 +70,6 @@ body {
   flex-direction: column;
   padding: var(--section-spacing);
   min-height: 100vh;
-  min-width: 100vw;
   overflow-x: hidden;
 }
 
@@ -263,7 +262,6 @@ preloader
   z-index: 2000;
   transition: 0.5s ease-in-out;
   opacity: 1;
-  overflow-x: hidden;
 }
 
 .preloader__content {
@@ -352,7 +350,6 @@ title
   position: relative;
   text-align: center;
   margin-bottom: 10rem;
-  overflow-x: hidden;
 }
 
 .title__heading {
@@ -383,7 +380,6 @@ pricing card
   width: 600px;
   border-radius: var(--main-radius);
   box-shadow: var(--main-shadow);
-  overflow-x: hidden;
 }
 
 .pricing__content {
